--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/css media/fav_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/css media/fav3.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
     <title>Subodh's Portfolio</title>
 </head>
 <body>
-    
+    <h1>Welcome to</h1>
 </body>
+<section class="first_section">
+    <div class="first_container">
+        <h1><span>Subodh's</span> World!</h1>
+        <h3>Web Developer & Learner</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
+    </div>
+    <div class="image_container">
+        <img src="/css media/my-bg.jpg" alt="alternative_nai">
+    </div>
+</section>
 </html>
