--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Subodh's Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to</h1>
 </body>
 <section class="first_section">
     <div class="first_container">
+        <h1>Welcome to</h1>
         <h1><span>Subodh's</span> World!</h1>
         <h3>Web Developer & Learner</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
     </div>
     <div class="image_container">
-        <img src="/css media/my-bg.jpg" alt="alternative_nai">
+        <img src="../css media/my-bg.jpg" alt="alternative_nai">
     </div>
 </section>
 </html>
