--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 </body>
 <section class="first_section">
-    <div class="first_container">
+    <div class="first_container half_width">
         <h1>Welcome to</h1>
         <h1><span>Subodh's</span> World!</h1>
         <h3>Web Developer & Learner</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
     </div>
-    <div class="image_container">
+    <div class="image_container half_width">
         <img src="../css media/my-bg.jpg" alt="alternative_nai">
     </div>
 </section>
