--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <h1><span>Subodh's</span> World!</h1>
         <h3>Web Developer & Learner</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
-        <a href="">Hire Me</a>
+        <a href="https://www.linkedin.com/in/subodh-chandra-shil-395b1b217/">Hire Me</a>
     </div>
     <div class="image_container half_width">
-        <img src="/css media/my-bg.jpg" alt="alternative_nai">
+        <img src="/css-media/my-bg.jpg" alt="alternative_nai">
     </div>
 </section>
 </html>
