--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/css media/fav3.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <title>Subodh's Portfolio</title>
 </head>
@@ -16,7 +17,7 @@
         <h1><span>Subodh's</span> World!</h1>
         <h3>Web Developer & Learner</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p><br>
-        <a href="https://github.com/HomieSubodh?tab=repositories" target="_blank">Hire Me</a>
+        <a href="https://github.com/HomieSubodh?tab=repositories" target="_blank"><i class="fas fa-search"></i>See Repo</a>
     </div>
     <div class="image_container half_width">
         <img src="images/my-bg.jpg" alt="alternative_nai">
