--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 </body>
 <section class="first_section">
+
+    <!-- section one div one -->
     <div class="first_container half_width">
         <h1>Welcome to</h1>
         <h1><span>Subodh's</span> World!</h1>
@@ -19,8 +21,26 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p><br>
         <a href="https://github.com/HomieSubodh?tab=repositories" target="_blank"><i class="fas fa-search"></i>See Repo</a>
     </div>
+
+    <!-- section one div two  -->
     <div class="image_container half_width">
         <img src="images/my-bg.jpg" alt="alternative_nai">
+    </div>
+</section>
+
+<!-- second section start's here -->
+<section class="second_section">
+
+    <!-- section two div one -->
+    <div class="image_container2 half_width">
+        <img src="images/png6.png" alt="think_big">
+    </div>
+
+    <!-- section two div two -->
+    <div class="second_container half_width">
+        <h1>Dream Big</h1>
+        <h3>Become a Web Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem nulla optio modi obcaecati magnam ipsa libero ipsum commodi, labore deleniti id voluptate officiis consequuntur repellat. Repellat illum harum dolorum!</p>
     </div>
 </section>
 </html>
