--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- section two div two -->
     <div class="second_container half_width">
-        <h1>Dream Big</h1>
+        <h1> <span>Dream</span> Big</h1>
         <h3>Become a Web Developer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem nulla optio modi obcaecati magnam ipsa libero ipsum commodi, labore deleniti id voluptate officiis consequuntur repellat. Repellat illum harum dolorum!</p>
     </div>
