--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/fav3.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
+    <script src="script.js" defer></script>
     <title>Subodh's Portfolio</title>
 </head>
+
 <body>
 </body>
 <section class="first_section">
@@ -16,10 +21,13 @@
     <!-- section one div one -->
     <div class="first_container half_width">
         <h1>Welcome to</h1>
-        <h1><span>Subodh's</span> World!</h1>
-        <h3>Web Developer & Learner</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p><br>
-        <a href="https://github.com/HomieSubodh?tab=repositories" target="_blank"><i class="fas fa-search"></i>See Repo</a>
+        <h1><span>Subodh's</span> World!</h1><br><br>
+        <h3>Web Developer & Learner</h3><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit
+            nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
+        <br><br>
+        <a href="https://github.com/HomieSubodh?tab=repositories" target="_blank"><i class="fas fa-search"></i>See
+            Repo</a>
     </div>
 
     <!-- section one div two  -->
@@ -38,9 +46,13 @@
 
     <!-- section two div two -->
     <div class="second_container half_width">
-        <h1> <span>Dream</span> Big</h1>
-        <h3>Become a Web Developer</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem nulla optio modi obcaecati magnam ipsa libero ipsum commodi, labore deleniti id voluptate officiis consequuntur repellat. Repellat illum harum dolorum!</p>
+        <h1> <span>Dream</span> Big</h1><br><br>
+        <h3>Become a Web Developer</h3><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem nulla optio modi obcaecati magnam ipsa
+            libero ipsum commodi, labore deleniti id voluptate officiis consequuntur repellat. Repellat illum harum
+            dolorum!</p><br><br>
+        <a href="#" id="download_form">Download Resume</a>
     </div>
 </section>
+
 </html>
