--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/fav3.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"0/>
+    <link rel="shortcut icon" href="images/fav2.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
     <script src="script.js" defer></script>
     <title>Subodh's Portfolio</title>
@@ -53,6 +53,31 @@
             dolorum!</p><br><br>
         <a href="#" id="download_form">Download Resume</a>
     </div>
+</section>
+
+    <!-- section three start's here -->
+<section class="third_section">
+    <h1>My <span>Experiences</span> </h1>
+
+    <!-- section three parent div-->
+<div class="parent">
+
+    <!-- section three > parent div > div one -->
+    <div id="left-border" class="full_stack_developer half_width glassbox">
+        <h1>Full Stack Developer</h1>
+        <h3 style="font-family: 'Baloo Da 2', cursive; color: rgba(128, 128, 128, 0.877); font-weight: bolder;">2022-Present | প্রো লেভেলের ডেভেলপার</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil est voluptates sed quibusdam, aliquid adipisci magni nisi tempore neque mollitia, eveniet repudiandae molestiae ipsa maxime atque unde, quis non. Optio.</p>
+    </div>
+
+    <!-- section three > parent div > div two -->
+
+    <div id="right-border" class="baby_developer half_width glassbox">
+        <h1>Baby Developer</h1>
+        <h3 style="font-family: 'Baloo Da 2', cursive; color: rgba(128, 128, 128, 0.877); font-weight: bolder;">2022-2024 | হিরো ডেভেলপার</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, neque nemo rerum numquam velit eos cum commodi recusandae deserunt in id animi corrupti, debitis architecto, nulla assumenda? Reiciendis, veniam officia?</p>
+    </div>
+</div>
+<br><br>
 </section>
 
 </html>
