--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- section one div one -->
     <div class="first_container half_width">
         <h1>Welcome to</h1>
-        <h1><span>Shil's</span> World!</h1><br><br>
+        <h1><span>Subodh's</span> World!</h1><br><br>
         <h3>Web Developer & Learner</h3><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet quisquam quod dolor eaque, qui fugit
             nobis voluptas tempora quia nesciunt culpa, ullam facere mollitia illum cumque delectus dicta? Cumque!</p>
